feat(remote): scaffold server APIs for new remote flow
